homework/5.kubernetes-network/rm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine
        image: redmine:4.1.1
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /account/register
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /account/register
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 15
      restartPolicy: Always
