homework/5.kubernetes-network/rm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: redmine
